--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,22 +1,43 @@
-/StudentDashBoard$1$1.class
+/Course.class
+/CourseGUI$1.class
+/CourseGUI$2.class
+/CourseGUI$3.class
+/CourseGUI$4.class
+/CourseGUI$5.class
+/CourseGUI.class
+/CourseManager.class
+/Database$1.class
+/Database$2.class
+/Database.class
+/HomePage$1.class
+/HomePage$2.class
+/HomePage$3.class
+/HomePage$4.class
+/HomePage.class
+/Instructor.class
+/InstructorDashBoard$1.class
+/InstructorDashBoard$2.class
+/InstructorDashBoard$3.class
+/InstructorDashBoard.class
+/InstructorLessonPannel$1.class
+/InstructorLessonPannel$2.class
+/InstructorLessonPannel$3.class
+/InstructorLessonPannel$4.class
+/InstructorLessonPannel.class
+/Lesson.class
+/LessonManager.class
+/LoginGUI$1.class
+/LoginGUI.class
+/Progress.class
+/SignupGUI$1.class
+/SignupGUI.class
+/Student.class
 /StudentDashBoard$1.class
-/StudentDashBoard$2$1.class
 /StudentDashBoard$2.class
 /StudentDashBoard$3.class
-/StudentDashBoard$4$1$1.class
-/StudentDashBoard$4$1$2.class
-/StudentDashBoard$4$1.class
-/StudentDashBoard$4.class
-/StudentDashBoard$4$2$1.class
-/StudentDashBoard$4$2$2.class
-/StudentDashBoard$4$2.class
-/StudentDashBoard$3$1.class
-/StudentDashBoard$3$2$1.class
-/StudentDashBoard$3$2$2.class
-/StudentDashBoard$3$2.class
-/LessonsWindow.class
-/StudetLessonPannel.class
-/StudentLessonPannel.class
-/StudentDashboard.class
 /StudentDashBoard.class
 /StudentLessonPannel$1.class
+/StudentLessonPannel.class
+/User.class
+/UserManager.class
+/Validations.class
